// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "types.proto";
import "google/protobuf/timestamp.proto";

package dm;

// FinishAttemptReq sets the final result of an Attempt.
message FinishAttemptReq {
  // required
  dm.ExecutionAuth auth = 1;

  string json_result = 2;
  google.protobuf.Timestamp expiration = 3;
}
